# libAL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: code_style.yml  codestyle.yml  unit_tests.yml
include/libal/: farthest_sampling.hpp  qbc.hpp  queryAL.hpp  uncertainty.hpp
libal/: base.py  uncertainty.py
test/: CMakeLists.txt  uncert.test.cpp
